feat(device) detect new brand Porsche (Rear Seat Entertainment) feat(device) detect new brand DF: Jaguar 01, Saturn 02, Saturn 02C, Tiger 01, Puma 01

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -26739,6 +26739,12 @@ Polestar:
   device: 'car browser'
   model: ''
 
+# Porsche (porsche.com)
+Porsche:
+  regex: 'Porsche Rear Seat Entertainment'
+  device: 'car browser'
+  model: ''
+
 # NavRoad (navroad.com)
 NavRoad:
   regex: '(?:NEXO (?:Smarty|handy|SMART DUO|Evo)|MOVIO 2)(?:[);/ ]|$)'
@@ -26767,6 +26773,20 @@ Smarty:
       model: 'Mini $1'
     - regex: 'Maxi 10L'
       model: 'Maxi 10L'
+
+# DF or DFGroup (dfgroup.ru)
+DF:
+  regex: '(?:JAGUAR|SATURN|TIGER|PUMA)-0\dC?(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'JAGUAR-01'
+      model: 'Jaguar 01'
+    - regex: 'SATURN-(02C?)'
+      model: 'Saturn $1'
+    - regex: 'TIGER-01'
+      model: 'Tiger 01'
+    - regex: 'PUMA-01'
+      model: 'Puma 01'
 
 # Vankyo
 Vankyo:
