--- a/Tests/fixtures/car_browser.yml
+++ b/Tests/fixtures/car_browser.yml
@@ -377,3 +377,21 @@
     model: MPC-110DSP
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Porsche Rear Seat Entertainment Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.77 Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 55.0.2883.77
+    engine: Blink
+    engine_version: ""
+  device:
+    type: car browser
+    brand: Porsche
+    model: ""
+  os_family: Android
+  browser_family: Chrome
