--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -3040,17 +3040,15 @@
     version: "9"
     platform: ""
   client:
-    type: browser
-    name: Chrome Webview
-    version: 75.0.3770.143
-    engine: Blink
-    engine_version: ""
+    type: mobile app
+    name: Quick Search TV
+    version: 21.09.23
   device:
     type: tv
     brand: Kivi
     model: 43U800BR
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 -
   user_agent: Mozilla/5.0 (Linux; Android 9; Smart Box D1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.159 Safari/537.36
   os:
@@ -3535,5 +3533,111 @@
     type: tv
     brand: ""
     model: ""
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; HiSmart 4K ATV4 Build/PTT1.181214.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.111 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 81.0.4044.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Hisense
+    model: HiSmart 4K ATV4
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Smart_Starwind Build/NMF26Q; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/52.0.2743.100 Safari/537.36 Quick Search TV/21.09.23
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Quick Search TV
+    version: 21.09.23
+  device:
+    type: tv
+    brand: Starwind
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; H10 PLAY) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: ""
+    model: H10 Play
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Mecool-BB2) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36 OPR/66.1.3445.62185
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Opera
+    version: 66.1.3445.62185
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Mecool
+    model: BB2
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; STV_32LED30C Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.123 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 64.0.3282.123
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Shivaki
+    model: STV-32LED30C
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; TF-LED32S75T2S Build/PTT1.190222.001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.91 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 69.0.3497.91
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Telefunken
+    model: TF-LED32S75T2S
   os_family: Android
   browser_family: Chrome
