--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -5285,3 +5285,21 @@
     model: Nexo Handy
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; UltraJ8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.105 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 89.0.4389.105
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: FiGO
+    model: Ultra J8
+  os_family: Android
+  browser_family: Chrome
