--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5371,7 +5371,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI (?:7 E401 4G|8 E400 4G|ATL 4G|Kids|Octa [178]0|1902 3G|10 E402|Z530 3G)|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](?:[0-9]{4}[PM][LG])|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx.+ [34]G L[TS][0-9]{4}[PM][GL]|Linx PS474S|PS1043MG|HT7071MG|HT5035PG|HT4039PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT1002MG|TT7026MW|VRL42|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI (?:7 E401 4G|8 E400 4G|ATL 4G|Kids|Octa [178]0|1902 3G|10 E402|Z530 3G)|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](?:[0-9]{4}[PM][LG])|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx.+ [34]G L[TS][0-9]{4}[PM][GL]|Linx PS474S|PS1043MG|HT7071MG|HT5035PG|HT4039PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT1002MG|TT7026MW|VRL42|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)|DM-LED(?:43SR23|24SR20)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -5497,6 +5497,10 @@ Digma:
     - regex: 'VRL42(?:[);/ ]|$)'
       device: 'wearable'
       model: 'VR L42'
+    # TV models
+    - regex: 'DM-LED(\d+SR\d+)(?:[);/ ]|$)'
+      device: 'tv'
+      model: 'DM-LED$1'
 
 # DoCoMo
 DoCoMo:
@@ -6706,7 +6710,7 @@ Famoco:
 
 # FiGO (figoglobal.com)
 FiGO:
-  regex: 'ATRIUM II F55L2|TRIO F40LT|CENTRIC S50G|EPIC F50G|Gravity X55L|Orion M50L|ULTRA M50G|M405B|VIRTUE3|F55L Build'
+  regex: 'ATRIUM II F55L2|TRIO F40LT|CENTRIC S50G|EPIC F50G|Gravity X55L|Orion M50L|ULTRA M50G|UltraJ8|M405B|VIRTUE3|F55L Build'
   device: 'smartphone'
   models:
     - regex: 'ATRIUM II F55L2'
@@ -6729,6 +6733,8 @@ FiGO:
       model: 'Virtue III'
     - regex: 'CENTRIC S50G'
       model: 'Centric S50G'
+    - regex: 'UltraJ8'
+      model: 'Ultra J8'
 
 # FNB
 FNB:
@@ -22126,13 +22132,21 @@ Kivi:
     - regex: '(55UC30G|40FK30G|43UK30G|32HR50G[RU]|32HK30G|32FK32G)_-Ver0([0-9])(?:[);/ ]|$)'
       model: '$1 v$2'
 
-# Divisat
+# Divisat (divisat.ru)
 Divisat:
-  regex: '(Divisat)(?:[);/ ]|$)'
+  regex: '(?:Divisat|X-MEDIA|DVS X3)(?:[);/ ]|$)'
   device: 'tv'
   models:
-    - regex: '(J-Link)(?:[);/ ]|$)'
+    - regex: '(?:DVS )?(J-Link|X3)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'X-MEDIA(?:[);/ ]|$)'
+      model: 'X-Media'
+
+# ArtLine (artline.ua)
+ArtLine:
+  regex: 'ARTLINE[ _-](KMX3)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
 
 # DIXON (https://www.dixoninfo.com/)
 DIXON:
@@ -22988,9 +23002,11 @@ Winds:
 
 # Asano
 Asano:
-  regex: '32LF7130S(?:[);/ ]|$)'
+  regex: '(?:32LH7010T|32LF7130S|28LH7011T)(?:[);/ ]|$)'
   device: 'tv'
-  model: '32LF7130S 32.0"'
+  models:
+    - regex: '(\d{2})(L[FH]\d+[ST])(?:[);/ ]|$)'
+      model: '$1$2 $1.0"'
 
 # Phonemax
 Phonemax:
@@ -25188,7 +25204,7 @@ Shtrikh-M:
 
 # BBK (bbk.ru)
 BBK:
-  regex: '([65]5|4[03]|3[29]|28)LEX[-_](81(?:27|39|45|58|61)|71(?:[23]7|4[345]|5[45]|6[368]|[57]8))[_/]([FU]?TS2C)(?:[);/ ]|$)'
+  regex: '([65]5|50|4[03]|3[29]|28)LEX[-_](81(?:27|39|45|58|6[12]|7[34])|71(?:[23]7|4[345]|5[45]|6[368]|[57]8))[_/]([FU]?TS2C)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1LEX-$2/$3'
 
@@ -26773,6 +26789,12 @@ Smarty:
       model: 'Mini $1'
     - regex: 'Maxi 10L'
       model: 'Maxi 10L'
+
+# Leff
+Leff:
+  regex: '(32H520T)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
 
 # DF or DFGroup (dfgroup.ru)
 DF:
