feat(device) detect new brand BDQ: Destiny, Smart B19 feat(device) detect new brand TuCEL: TL554B, TC504B feat(device) detect brand Odys: Titan 10 LTE feat(device) detect brand Symphony: V141 feat(device) detect brand RT Project: Shock 5.5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13319,7 +13319,7 @@ O2:
 
 # Odys (odys.de)
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|MAVEN_G10|SLADE_X55|XELIO_PRO_10_LTE|NOTOSplus3G|PACE ?10|PACE_10_LTE'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|MAVEN_G10|SLADE_X55|XELIO_PRO_10_LTE|NOTOSplus3G|PACE ?10|PACE_10_LTE|Titan_10_LTE'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -13394,6 +13394,8 @@ Odys:
       model: 'Uno X8'
     - regex: 'ADM8000KP'
       model: 'Titan'
+    - regex: 'Titan_10_LTE'
+      model: 'Titan 10 LTE'
     - regex: 'PYRO_7_PLUS_3G'
       model: 'Pyro 7 Plus 3G'
     - regex: 'NOVA_X7_PLUS_3G'
@@ -14753,11 +14755,11 @@ Roadrover:
 
 # RT Project
 RT Project:
-  regex: 'Shock 5'
+  regex: 'Shock ?(?:5|5\.5)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Shock 5'
-      model: 'Shock 5'
+    - regex: 'Shock ?(5|5\.5)(?:[);/ ]|$)'
+      model: 'Shock $1'
 
 # S-TELL
 S-TELL:
@@ -17603,7 +17605,7 @@ Amazon:
 
 # Symphony
 Symphony:
-  regex: 'SYMPHONY[ \_]([a-z0-9]+)|(?:roar[ _](?:V20|V78|E80|V150))|roarV95|ZVIII(?:[);/ ]|$)'
+  regex: 'SYMPHONY[ \_]([a-z0-9]+)|(?:(?:roar[ _](?:V20|V78|E80|V150))|roarV95|ZVIII|V141)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ZVIII'
@@ -17612,6 +17614,8 @@ Symphony:
       model: 'Atom II'
     - regex: 'roar[ _]?(V20|E80|V78|V95|V150)(?:[);/ ]|$)'
       model: 'Roar $1'
+    - regex: '(V141)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'SYMPHONY[ \_]([a-z0-9]+)'
       model: '$1'
 
@@ -26809,6 +26813,23 @@ DF:
       model: 'Tiger 01'
     - regex: 'PUMA-01'
       model: 'Puma 01'
+
+# BDQ or BDQ Mobile (bdqholdings.co.mz)
+BDQ:
+  regex: '(?:SMART_B19|Destiny)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'SMART_B19'
+      model: 'Smart B19'
+    - regex: 'Destiny'
+      device: 'tablet'
+      model: 'Destiny'
+
+# TuCEL
+TuCEL:
+  regex: '(TL554B|TC504B)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Vankyo
 Vankyo:
