feat(device) detect brand Sky: Prestige feat(device) detect brand Polaroid: Cosmo C6 (PSPCL30A0) feat(device) detect brand Prestigio: Muze H5 LTE (PSP5523DUO), Wize V3 (PSP3513DUO_RU),  Grace 7781 4G, Muze 4667 3G, Wize 4667 3G, Wize 4638 3G, Grace 4327 3G, Wize 4311 3G,  Wize 4137 4G, Wize 4131 4G, Wize 4118 3G, Wize 4117 3G, Wize 4117 3G, Wize 4111 3G,  Grace 3878 4G, Muze 3871 4G, Muze 3861 4G, Grace 3848 4G, Muze 3831 4G, Wize 3771 3G,  Grace 3768 3G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16229,7 +16229,7 @@ Senwa:
 
 # Sky or Sky Devices (skydevices.com)
 Sky:
-  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|[TE]55|T[46]|[ABCHP]5|5_5_Octa|[BCEHPT]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|[HJM]5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)|SKYVISION|SKY Black'
+  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|[TE]55|T[46]|[ABCHP]5|5_5_Octa|[BCEHPT]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|[HJM]5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)|SKYVISION|SKY Black| SKY[ _]Prestige'
   device: 'smartphone'
   models:
     - regex: 'Platinum[_ ](?:5\.0M|M5)'
@@ -16268,6 +16268,8 @@ Sky:
       model: 'Pro III'
     - regex: 'SKY 55M'
       model: '55M'
+    - regex: 'SKY[ _]Prestige'
+      model: 'Prestige'
     - regex: 'SKY[_ ]([3-7]\.[05](?:[A-Z]{1,2})?)'
       model: '$1'
 
@@ -16561,7 +16563,7 @@ Plum:
 
 # Polaroid
 Polaroid:
-  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+(?:[);/ ]|$)|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|P902/A900|PSPC(?:505|550|[MZL]20A0|K2[01]NA)|SIGMA 5|MIDS145PXE|MIDS747PX|MID4004JBL|MIDS185PR|PSPTD21NA)(?:[);/ ]|$)'
+  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+(?:[);/ ]|$)|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|P902/A900|PSPC(?:505|550|[MZL]20A0|K2[01]NA)|SIGMA 5|MIDS145PXE|MIDS747PX|MID4004JBL|MIDS185PR|PSPTD21NA|PSPCL30A0)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -16577,6 +16579,8 @@ Polaroid:
       model: 'Turbo E'
     - regex: 'PSPC(505|550)'
       model: 'Cosmo $1'
+    - regex: 'PSPCL30A0'
+      model: 'Cosmo C6'
     - regex: 'P5006A'
       model: 'Cosmo K'
     - regex: 'P5526A'
@@ -16790,6 +16794,9 @@ Prestigio:
     - regex: 'PSP3552DUO'
       device: 'smartphone'
       model: 'Muze H3'
+    - regex: 'PSP5523DUO'
+      device: 'smartphone'
+      model: 'Muze H5 LTE'
     - regex: 'PSP3515DUO'
       device: 'smartphone'
       model: 'Muze M3 LTE'
@@ -16850,6 +16857,9 @@ Prestigio:
     - regex: 'PSP3514DUO'
       device: 'smartphone'
       model: 'Wize U3'
+    - regex: 'PSP3513DUO'
+      device: 'smartphone'
+      model: 'Wize V3'
     - regex: 'PSP3416DUO'
       device: 'smartphone'
       model: 'Wize YA3'
@@ -16890,7 +16900,7 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT(3118|3[12]01|3[12]57|7788|5588|5791|577[18])[_ ]([34])G'
+    - regex: 'PMT(3118|38[74]8|3[12]01|3[12]57|778[18]|5588|5791|577[18]|4327|3768)[_ ]([34])G'
       model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
@@ -16898,7 +16908,9 @@ Prestigio:
       model: 'Q Pro'
     - regex: 'PMT(1177|3208|3618|31[357]1|1157|1196|3[10]96|3[17]61)[_ ]([34])GE?'
       model: 'MultiPad Wize $1 $2G'
-    - regex: 'PMT(3231|4231)[_ ]([34])GE?'
+    - regex: 'PMT(4667|4638|4311|413[17]|411[178]|3771)[_ ]([34])GE?'
+      model: 'Wize $1 $2G'
+    - regex: 'PMT(3231|4231|4667|38[3678]1)[_ ]([34])GE?'
       model: 'Muze $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
