--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16908,7 +16908,7 @@ Prestigio:
       model: 'Q Pro'
     - regex: 'PMT(1177|3208|3618|31[357]1|1157|1196|3[10]96|3[17]61)[_ ]([34])GE?'
       model: 'MultiPad Wize $1 $2G'
-    - regex: 'PMT(4667|4638|4311|413[17]|411[178]|3771)[_ ]([34])GE?'
+    - regex: 'PMT(4638|4311|413[17]|411[178]|3771)[_ ]([34])GE?'
       model: 'Wize $1 $2G'
     - regex: 'PMT(3231|4231|4667|38[3678]1)[_ ]([34])GE?'
       model: 'Muze $1 $2G'
