Detect new brands: ArtLine, BDQ, TuCEL and Detect devices for existing brands: BBK, Divisat, Digma, Asano, Leff, Odys, Symphony, RT Project, Polaroid, Prestigio (#6960)
* feat(device) detect new brand ArtLine: KMX3
feat(device) detect brand BBK: 50LEX-8173/UTS2C, 55LEX-8161/UTS2C, 55LEX-8162/UTS2C, 55LEX-8174/UTS2C
feat(device) detect brand Divisat: X-Media, X3
feat(device) detect brand Digma: DM-LED43SR23, DM-LED24SR20
feat(device) detect brand Asano: 28LH7011T 28.0", 32LH7010T 32.0"
feat(device) detect brand Leff: 32H520T

feat(device) added test for brand TrekStor: SurfTab B10

* feat(device) detect new brand BDQ: Destiny, Smart B19
feat(device) detect new brand TuCEL: TL554B, TC504B
feat(device) detect brand Odys: Titan 10 LTE
feat(device) detect brand Symphony: V141
feat(device) detect brand RT Project: Shock 5.5

* feat(device) detect brand Sky: Prestige
feat(device) detect brand Polaroid: Cosmo C6 (PSPCL30A0)
feat(device) detect brand Prestigio: Muze H5 LTE (PSP5523DUO), Wize V3 (PSP3513DUO_RU),
 Grace 7781 4G, Muze 4667 3G, Wize 4667 3G, Wize 4638 3G, Grace 4327 3G, Wize 4311 3G,
 Wize 4137 4G, Wize 4131 4G, Wize 4118 3G, Wize 4117 3G, Wize 4117 3G, Wize 4111 3G,
 Grace 3878 4G, Muze 3871 4G, Muze 3861 4G, Grace 3848 4G, Muze 3831 4G, Wize 3771 3G,
 Grace 3768 3G

* fix: tests

--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -7608,3 +7608,381 @@
     model: EGQ101
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Trekstor Surftab B10) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: TrekStor
+    model: SurfTab B10
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; Titan_10_LTE) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Odys
+    model: Titan 10 LTE
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Destiny) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.136 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 74.0.3729.136
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: BDQ
+    model: Destiny
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT7781_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.92 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Grace 7781 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4667_3G_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 4667 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4638_3G_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4638 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4327_3G_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.92 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 96.0.4664.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Grace 4327 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4311_3G_RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.166 Mobile Safari/537.36 OPR/65.2.3381.61420
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 65.2.3381.61420
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4311 3G
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4137_4G Build/OPM2.171019.012) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.71 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 94.0.4606.71
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4137 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4131_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4131 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4118_3G_EEA) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4118 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4117_3G_EEA) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4117 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4117_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4117 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT4111_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 4111 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3878_4G Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/96.0.4664.45 Mobile Safari/537.36 SputnikBrowser/1.3.3.166
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Sputnik Browser
+    version: 1.3.3.166
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Grace 3878 4G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3871_4G Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.45 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.45
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 3871 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3861_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 3861 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3848_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.82 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 93.0.4577.82
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Grace 3848 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3831_4G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Mobile Safari/537.36 OPR/66.2.3445.62346
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 66.2.3445.62346
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Muze 3831 4G
+  os_family: Android
+  browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3771_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.92 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Wize 3771 3G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; PMT3768_3G) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Prestigio
+    model: Grace 3768 3G
+  os_family: Android
+  browser_family: Chrome
