--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5375,7 +5375,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI (?:7 E401 4G|8 E400 4G|ATL 4G|Kids|Octa [178]0|1902 3G|10 E402|Z530 3G)|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](?:[0-9]{4}[PM][LG])|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx.+ [34]G L[TS][0-9]{4}[PM][GL]|Linx PS474S|PS1043MG|HT7071MG|HT5035PG|HT4039PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT1002MG|TT7026MW|VRL42|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI (?:7 E401 4G|8 E400 4G|ATL 4G|Kids|Octa [178]0|1902 3G|10 E402|Z530 3G)|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](?:[0-9]{4}[PM][LG])|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx.+ [34]G L[TS][0-9]{4}[PM][GL]|Linx PS474S|PS1043MG|HT7071MG|HT5035PG|HT4039PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT1002MG|TT7026MW|VRL42|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)|DM-LED(?:43SR23|24SR20)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -5501,6 +5501,10 @@ Digma:
     - regex: 'VRL42(?:[);/ ]|$)'
       device: 'wearable'
       model: 'VR L42'
+    # TV models
+    - regex: 'DM-LED(\d+SR\d+)(?:[);/ ]|$)'
+      device: 'tv'
+      model: 'DM-LED$1'
 
 # DoCoMo
 DoCoMo:
@@ -6715,7 +6719,7 @@ Famoco:
 
 # FiGO (figoglobal.com)
 FiGO:
-  regex: 'ATRIUM II F55L2|TRIO F40LT|CENTRIC S50G|EPIC F50G|Gravity X55L|Orion M50L|ULTRA M50G|M405B|VIRTUE3|F55L Build'
+  regex: 'ATRIUM II F55L2|TRIO F40LT|CENTRIC S50G|EPIC F50G|Gravity X55L|Orion M50L|ULTRA M50G|UltraJ8|M405B|VIRTUE3|F55L Build'
   device: 'smartphone'
   models:
     - regex: 'ATRIUM II F55L2'
@@ -6738,6 +6742,8 @@ FiGO:
       model: 'Virtue III'
     - regex: 'CENTRIC S50G'
       model: 'Centric S50G'
+    - regex: 'UltraJ8'
+      model: 'Ultra J8'
 
 # FNB
 FNB:
@@ -13344,7 +13350,7 @@ O2:
 
 # Odys (odys.de)
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|MAVEN_G10|SLADE_X55|XELIO_PRO_10_LTE|NOTOSplus3G|PACE ?10|PACE_10_LTE'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|JuniorT8Pro|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|MAVEN_G10|SLADE_X55|XELIO_PRO_10_LTE|NOTOSplus3G|PACE ?10|PACE_10_LTE|Titan_10_LTE'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -13419,6 +13425,8 @@ Odys:
       model: 'Uno X8'
     - regex: 'ADM8000KP'
       model: 'Titan'
+    - regex: 'Titan_10_LTE'
+      model: 'Titan 10 LTE'
     - regex: 'PYRO_7_PLUS_3G'
       model: 'Pyro 7 Plus 3G'
     - regex: 'NOVA_X7_PLUS_3G'
@@ -14780,11 +14788,11 @@ Roadrover:
 
 # RT Project
 RT Project:
-  regex: 'Shock 5'
+  regex: 'Shock ?(?:5|5\.5)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Shock 5'
-      model: 'Shock 5'
+    - regex: 'Shock ?(5|5\.5)(?:[);/ ]|$)'
+      model: 'Shock $1'
 
 # S-TELL
 S-TELL:
@@ -16265,7 +16273,7 @@ Senwa:
 
 # Sky or Sky Devices (skydevices.com)
 Sky:
-  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|[TE]55|T[46]|[ABCHP]5|5_5_Octa|[BCEHPT]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|[HJM]5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)|SKYVISION|SKY Black'
+  regex: '(?:SKY|Elite|Fuego)[_ ][3-7]\.[05](?:[A-Z]{1,2})?|Elite[ _](?:5_0T|M45|[45]T|45T|GO|M5Plus|[TE]55|T[46]|[ABCHP]5|5_5_Octa|[BCEHPT]55)|Platinum[_ ](?:5.0M|5\.5C|[56]\.[05]\+?|[HJM]5|[ABCM]4|[ACG]55|[ABDEFG]5|A57|P9|X|UNO|VIEW2|O|4\.0|4_0Plus)|PLATINUMVIEW|SKY[ _](?:55M|Pro_III)|SKYVISION|SKY Black| SKY[ _]Prestige'
   device: 'smartphone'
   models:
     - regex: 'Platinum[_ ](?:5\.0M|M5)'
@@ -16304,6 +16312,8 @@ Sky:
       model: 'Pro III'
     - regex: 'SKY 55M'
       model: '55M'
+    - regex: 'SKY[ _]Prestige'
+      model: 'Prestige'
     - regex: 'SKY[_ ]([3-7]\.[05](?:[A-Z]{1,2})?)'
       model: '$1'
 
@@ -16597,7 +16607,7 @@ Plum:
 
 # Polaroid
 Polaroid:
-  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+(?:[);/ ]|$)|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|P902/A900|PSPC(?:505|550|[MZL]20A0|K2[01]NA)|SIGMA 5|MIDS145PXE|MIDS747PX|MID4004JBL|MIDS185PR|PSPTD21NA|POMDTB006)(?:[);/ ]|$)'
+  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+(?:[);/ ]|$)|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|P902/A900|PSPC(?:505|550|[MZL]20A0|K2[01]NA)|SIGMA 5|MIDS145PXE|MIDS747PX|MID4004JBL|MIDS185PR|PSPTD21NA|POMDTB006|PSPCL30A0)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -16613,6 +16623,8 @@ Polaroid:
       model: 'Turbo E'
     - regex: 'PSPC(505|550)'
       model: 'Cosmo $1'
+    - regex: 'PSPCL30A0'
+      model: 'Cosmo C6'
     - regex: 'P5006A'
       model: 'Cosmo K'
     - regex: 'P5526A'
@@ -16826,6 +16838,9 @@ Prestigio:
     - regex: 'PSP3552DUO'
       device: 'smartphone'
       model: 'Muze H3'
+    - regex: 'PSP5523DUO'
+      device: 'smartphone'
+      model: 'Muze H5 LTE'
     - regex: 'PSP3515DUO'
       device: 'smartphone'
       model: 'Muze M3 LTE'
@@ -16886,6 +16901,9 @@ Prestigio:
     - regex: 'PSP3514DUO'
       device: 'smartphone'
       model: 'Wize U3'
+    - regex: 'PSP3513DUO'
+      device: 'smartphone'
+      model: 'Wize V3'
     - regex: 'PSP3416DUO'
       device: 'smartphone'
       model: 'Wize YA3'
@@ -16926,7 +16944,7 @@ Prestigio:
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
       model: 'Geo Vision Tour 2'
-    - regex: 'PMT(3118|3[12]01|3[12]57|7788|5588|5791|577[18])[_ ]([34])G'
+    - regex: 'PMT(3118|38[74]8|3[12]01|3[12]57|778[18]|5588|5791|577[18]|4327|3768)[_ ]([34])G'
       model: 'Grace $1 $2G'
     - regex: 'PMT3287_3G'
       model: 'MultiPad Ranger 8.0 3G'
@@ -16934,7 +16952,9 @@ Prestigio:
       model: 'Q Pro'
     - regex: 'PMT(1177|3208|3618|31[357]1|1157|1196|3[10]96|3[17]61)[_ ]([34])GE?'
       model: 'MultiPad Wize $1 $2G'
-    - regex: 'PMT(3231|4231)[_ ]([34])GE?'
+    - regex: 'PMT(4638|4311|413[17]|411[178]|3771)[_ ]([34])GE?'
+      model: 'Wize $1 $2G'
+    - regex: 'PMT(3231|4231|4667|38[3678]1)[_ ]([34])GE?'
       model: 'Muze $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
@@ -17643,7 +17663,7 @@ Amazon:
 
 # Symphony
 Symphony:
-  regex: 'SYMPHONY[ \_]([a-z0-9]+)|(?:roar[ _](?:V20|V78|E80|V150))|roarV95|ZVIII(?:[);/ ]|$)'
+  regex: 'SYMPHONY[ \_]([a-z0-9]+)|(?:(?:roar[ _](?:V20|V78|E80|V150))|roarV95|ZVIII|V141)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ZVIII'
@@ -17652,6 +17672,8 @@ Symphony:
       model: 'Atom II'
     - regex: 'roar[ _]?(V20|E80|V78|V95|V150)(?:[);/ ]|$)'
       model: 'Roar $1'
+    - regex: '(V141)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'SYMPHONY[ \_]([a-z0-9]+)'
       model: '$1'
 
@@ -22174,13 +22196,21 @@ Kivi:
     - regex: '(55UC30G|40FK30G|43UK30G|32HR50G[RU]|32HK30G|32FK32G)_-Ver0([0-9])(?:[);/ ]|$)'
       model: '$1 v$2'
 
-# Divisat
+# Divisat (divisat.ru)
 Divisat:
-  regex: '(Divisat)(?:[);/ ]|$)'
+  regex: '(?:Divisat|X-MEDIA|DVS X3)(?:[);/ ]|$)'
   device: 'tv'
   models:
-    - regex: '(J-Link)(?:[);/ ]|$)'
+    - regex: '(?:DVS )?(J-Link|X3)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'X-MEDIA(?:[);/ ]|$)'
+      model: 'X-Media'
+
+# ArtLine (artline.ua)
+ArtLine:
+  regex: 'ARTLINE[ _-](KMX3)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
 
 # DIXON (https://www.dixoninfo.com/)
 DIXON:
@@ -23036,9 +23066,11 @@ Winds:
 
 # Asano
 Asano:
-  regex: '32LF7130S(?:[);/ ]|$)'
+  regex: '(?:32LH7010T|32LF7130S|28LH7011T)(?:[);/ ]|$)'
   device: 'tv'
-  model: '32LF7130S 32.0"'
+  models:
+    - regex: '(\d{2})(L[FH]\d+[ST])(?:[);/ ]|$)'
+      model: '$1$2 $1.0"'
 
 # Phonemax
 Phonemax:
@@ -25238,7 +25270,7 @@ Shtrikh-M:
 
 # BBK (bbk.ru)
 BBK:
-  regex: '([65]5|4[03]|3[29]|28)LEX[-_](81(?:27|39|45|58|61)|71(?:[23]7|4[345]|5[45]|6[368]|[57]8))[_/]([FU]?TS2C)(?:[);/ ]|$)'
+  regex: '([65]5|50|4[03]|3[29]|28)LEX[-_](81(?:27|39|45|58|6[12]|7[34])|71(?:[23]7|4[345]|5[45]|6[368]|[57]8))[_/]([FU]?TS2C)(?:[);/ ]|$)'
   device: 'tv'
   model: '$1LEX-$2/$3'
 
@@ -26826,6 +26858,12 @@ Smarty:
     - regex: 'Maxi 10L'
       model: 'Maxi 10L'
 
+# Leff
+Leff:
+  regex: '(32H520T)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
+
 # DF or DFGroup (dfgroup.ru)
 DF:
   regex: '(?:JAGUAR|SATURN|TIGER|PUMA)-0\dC?(?:[);/ ]|$)'
@@ -26839,6 +26877,23 @@ DF:
       model: 'Tiger 01'
     - regex: 'PUMA-01'
       model: 'Puma 01'
+
+# BDQ or BDQ Mobile (bdqholdings.co.mz)
+BDQ:
+  regex: '(?:SMART_B19|Destiny)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'SMART_B19'
+      model: 'Smart B19'
+    - regex: 'Destiny'
+      device: 'tablet'
+      model: 'Destiny'
+
+# TuCEL
+TuCEL:
+  regex: '(TL554B|TC504B)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Vankyo
 Vankyo:
